[package]
name = "pqc_core"
version = "0.2.0"
edition = "2021"
authors = ["Mitchell Berry <foss@mitchellberry.com>"]
readme = "readme.md"
repository = "https://github.com/Argyle-Software/pqc_core"
license = "MIT OR Apache-2.0"
description = "Common functionality for the pqc series of crates"

[dependencies]
zeroize = { version = "1.5.7", optional = true }

[features]
load = []
zero = ["zeroize"]
unique_feature = []
